Revision history for Task-BeLike-HMA-Toolchain

0.04_02 Jan 09, 2011

        - Add optional modules for enhancement of CPAN.pm
            * DBI
            * DBD::SQLite
            * CPAN::SQLite
        - Disable Encode, File::Which, File::HomeDir, IO::File on 5.6.x
        - Require Scalar::Util 1.08 to workaround a bug in YAML::Tiny
          (RT #53490)

0.04_01 Dec 11, 2010

        - Bumped YAML::XS to 0.34 and made its installation dependent on
          Perl 5.8.8 (RT #62054)
        - Don't install YAML::Syck if YAML::XS can be installed
        - Switch GitHub URLs to https

0.03    Oct 10, 2010

        - Made more dependencies explicit for ease of individual update
            * Compress::Zlib
            * Digest::MD5
            * ExtUtils::Manifest
            * File::Path
            * File::Spec
            * Net::FTP
            * Test
            * version.pm
        - Added optional modules for enhancement of CPAN.pm
            * File::HomeDir
            * File::Which
            * Storable
            * Text::Glob
        - Bumped to more recent versions
            * Module::Build and dependencies
            * Test::More
        - Added YAML::Syck for YAML support in very legacy Perls
        - Changed minimum Perl version to 5.6.1

0.01    Sep 11, 2010

        - Initial commit and release to GitHub