@@ -9,6 +9,7 @@ Revision history for Task-BeLike-HMA-Toolchain
         - Disable Encode, File::Which, File::HomeDir, IO::File on 5.6.x
         - Require Scalar::Util 1.08 to workaround a bug in YAML::Tiny
           (RT #53490)
+        - Disable Storable, YAML::Syck on 5.8.0
 
 0.04_01 Dec 11, 2010
 
